added design to branch to push

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <H1>This is version 6</H1>
+    <H1>This is design version 6</H1>
     
 </body>
 </html>
